load("@cxx.rs//tools/bazel:rust_cxx_bridge.bzl", "rust_cxx_bridge")
load("@rules_rust//rust:defs.bzl", "rust_binary")

cc_library(
    name = "engine",
    srcs = [
        "src/engine.cpp",
        "src/engine.hpp",
    ],
    deps = [
        "@rules_cuda//cuda:runtime",
        "@tensorrt//:nvinfer",
        "@tensorrt//:nvinferplugin",
    ],
)

cc_library(
    name = "rtmo_header",
    hdrs = ["src/rtmo.hpp"],
    includes = ["src"],
)

cc_library(
    name = "rtmo",
    srcs = [
        "src/rtmo.cpp",
    ],
    deps = [
        ":engine",
        ":rtmo_bridge/include",
        ":rtmo_header",
        "@cvcuda",
        "@cxx.rs//:core",
    ],
)

rust_cxx_bridge(
    name = "rtmo_bridge",
    src = "src/rtmo.rs",
    deps = [
        ":engine",
        ":rtmo",
        "@rules_cuda//cuda:runtime",
    ],
)

rust_binary(
    name = "image_demo",
    srcs = [
        "src/image_demo.rs",
        "src/rtmo.rs",
    ],
    deps = [
        ":rtmo",
        ":rtmo_bridge",
        "@crates//:image",
        "@cxx.rs//:cxx",
    ],
)

rust_binary(
    name = "video_demo",
    srcs = [
        "src/rtmo.rs",
        "src/video_demo.rs",
    ],
    deps = [
        ":rtmo",
        ":rtmo_bridge",
        "@crates//:image",
        "@crates//:minifb",
        "@crates//:video-rs",
        "@cxx.rs//:cxx",
    ],
)
