[workspace]
members = [
    "detector",
    "tracker",
    "examples",
]
resolver = "2"

[workspace.package]
edition = "2021"
description = "Pose Track with RTMO and ByteTrack"
homepage = "https://github.com/wep21/tensorrt-rtmo-rust"
license = "MIT OR Apache-2.0"
authors = [
  "Daisuke Nishimatsu <daisuke.nishimatsu1021@gmail.com>",
]
readme = "README.md"
repository = "https://github.com/wep21/tensorrt-rtmo-rus"
rust-version = "1.81"
version = "0.1.0"
