module(name = "tensorrt_rtmo_rust")

bazel_dep(name = "cxx.rs", version = "1.0.149")
bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "rules_cc", version = "0.1.1")
bazel_dep(name = "rules_cuda", version = "0.2.4")
bazel_dep(name = "rules_rust", version = "0.61.0")

cuda = use_extension("@rules_cuda//cuda:extensions.bzl", "toolchain")
cuda.local_toolchain(
    name = "local_cuda",
    toolkit_path = "",
)
use_repo(cuda, "local_cuda")

non_module_deps = use_extension("@tensorrt_rtmo_rust//:extensions.bzl", "non_module_deps")
use_repo(
    non_module_deps,
    "cvcuda",
    "tensorrt",
)

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(edition = "2021")
use_repo(rust, "rust_toolchains")

register_toolchains("@rust_toolchains//:all")

crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
crate.spec(
    package = "image",
    version = "0.24",
)
crate.spec(
    features = ["ndarray"],
    package = "video-rs",
    version = "0.10.3",
)
crate.spec(
    package = "minifb",
    version = "0.28.0",
)
crate.spec(
    package = "thiserror",
    version = "2.0.12",
)
crate.spec(
    package = "nalgebra",
    version = "0.33.2",
)
crate.spec(
    package = "num",
    version = "0.4.3",
)
crate.spec(
    package = "nearly_eq",
    version = "0.2.4",
)
crate.spec(
    package = "quickcheck",
    version = "1.0.3",
)
crate.spec(
    package = "rand",
    version = "0.8.5",
)
crate.from_specs()
use_repo(crate, "crates")

bazel_dep(
    name = "buildifier_prebuilt",
    version = "8.0.3",
    dev_dependency = True,
)
