module(name = "tensorrt_rtmo_rust")

bazel_dep(name = "cxx.rs", version = "1.0.149")
bazel_dep(name = "platforms", version = "0.0.11")
bazel_dep(name = "rules_cc", version = "0.1.1")
bazel_dep(name = "rules_cuda", version = "0.2.4")
bazel_dep(name = "rules_rust", version = "0.61.0")

cuda = use_extension("@rules_cuda//cuda:extensions.bzl", "toolchain")
cuda.local_toolchain(
    name = "local_cuda",
    toolkit_path = "",
)
use_repo(cuda, "local_cuda")

non_module_deps = use_extension("@tensorrt_rtmo_rust//:extensions.bzl", "non_module_deps")
use_repo(
    non_module_deps,
    "cvcuda",
    "tensorrt",
)

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(edition = "2021")
use_repo(rust, "rust_toolchains")

register_toolchains("@rust_toolchains//:all")

crate = use_extension(
    "@rules_rust//crate_universe:extensions.bzl",
    "crate",
)

crate.from_cargo(
    name = "crates",
    cargo_lockfile = "//:Cargo.lock",
    manifests = [
        "//:Cargo.toml",
        "//detector:Cargo.toml",
        "//examples:Cargo.toml",
        "//tracker:Cargo.toml",
    ],
)
crate.annotation(
    build_script_env = dict(
        CARGO_PKG_AUTHORS = "",
        CARGO_PKG_DESCRIPTION = "",
        CARGO_PKG_HOMEPAGE = "",
        CARGO_PKG_LICENSE = "",
        CARGO_PKG_REPOSITORY = "",
        RUSTDOC = "",
    ),
    crate = "rav1e",
    repositories = ["crates"],
)
use_repo(crate, "crates")

bazel_dep(
    name = "buildifier_prebuilt",
    version = "8.0.3",
    dev_dependency = True,
)
