load("@cxx.rs//tools/bazel:rust_cxx_bridge.bzl", "rust_cxx_bridge")
load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library", "rust_test")

cc_library(
    name = "engine",
    srcs = [
        "src/engine.cpp",
        "src/engine.hpp",
    ],
    deps = [
        "@rules_cuda//cuda:runtime",
        "@tensorrt//:nvinfer",
        "@tensorrt//:nvinferplugin",
    ],
)

cc_library(
    name = "rtmo_header",
    hdrs = ["src/rtmo.hpp"],
    includes = ["src"],
)

cc_library(
    name = "rtmo_cpp",
    srcs = [
        "src/rtmo.cpp",
    ],
    deps = [
        ":engine",
        ":rtmo_bridge/include",
        ":rtmo_header",
        "@cvcuda",
        "@cxx.rs//:core",
    ],
)

rust_cxx_bridge(
    name = "rtmo_bridge",
    src = "src/rtmo.rs",
    deps = [
        ":engine",
        ":rtmo_cpp",
        "@rules_cuda//cuda:runtime",
    ],
)

rust_library(
    name = "rtmo",
    srcs = [
        "src/lib.rs",
        "src/rtmo.rs",
    ],
    deps = [
        ":rtmo_cpp",
        ":rtmo_bridge",
        "@cxx.rs//:cxx",
    ],
    visibility = ["//visibility:public"],
)
