[package]
name = "rtmo"
version = "0.1.0" # Default version, can be adjusted
edition = "2021"  # From MODULE.bazel (rust.toolchain)
authors = ["Your Name <you@example.com>"] # Placeholder

[lib]
name = "rtmo"
path = "src/lib.rs"

[dependencies]
cxx = "1.0.149"

# For handling the C++ compilation and linking:
[build-dependencies]
cxx-build = "1.0.149" # Or a suitable build script helper if available via rules_rust

# Potentially, if rtmo.rs is a separate module for the bridge
# [[bin]]
# name = "rtmo_bridge_bin" # Example if it were a binary
# path = "src/rtmo.rs"
