load("@rules_rust//rust:defs.bzl", "rust_library", "rust_test")

rust_library(
    name = "tracker",
    srcs = glob([
        "src/*.rs",
    ]),
    deps = [
        "@crates//:nalgebra",
        "@crates//:num",
        "@crates//:thiserror",
    ],
)

rust_test(
    name = "tracker_test",
    size = "small",
    srcs = glob([
        "src/*.rs",
    ]),
    deps = [
        "@crates//:nalgebra",
        "@crates//:nearly_eq",
        "@crates//:num",
        "@crates//:quickcheck",
        "@crates//:rand",
        "@crates//:thiserror",
    ],
)
